--- a/BotTibia/BotTibia.csproj
+++ b/BotTibia/BotTibia.csproj
@@ -90,14 +90,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Acoes\CapturaTela.cs" />
-    <Compile Include="Acoes\ClickEvent.cs" />
-    <Compile Include="Acoes\Healer.cs" />
-    <Compile Include="Acoes\PegaInformacoesDosPixels.cs" />
+    <Compile Include="Actions\AHK\AhkFunctions.cs" />
+    <Compile Include="Actions\Print\CapturaTela.cs" />
+    <Compile Include="Actions\Events\ClickEvent.cs" />
+    <Compile Include="Actions\Heal\Healer.cs" />
     <Compile Include="Classes\Global.cs" />
     <Compile Include="Elementos\CoordenadasDeElementos.cs" />
-    <Compile Include="Acoes\PegaElementosDaTela.cs" />
-    <Compile Include="Acoes\PegaTelaPrincipal.cs" />
+    <Compile Include="Actions\FindElements\PegaElementosDaTela.cs" />
+    <Compile Include="Actions\Scan\PegaTelaPrincipal.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -110,6 +110,7 @@
     <Compile Include="Elementos\PersonagemStatus.cs" />
     <Compile Include="Elementos\VidaBar.cs" />
     <Compile Include="Elementos\CoordenadasXeY.cs" />
+    <Compile Include="Enum\MouseEvent.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -133,6 +134,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Actions\AHK\Gdip_All_2.ahk">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -159,6 +163,27 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="favicon-32x32.png" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Images\Global\Configs\coracao.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Global\Configs\raio.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Global\Configs\game.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Global\Configs\statusBar.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
