--- a/BotTibia/BotTibia.csproj
+++ b/BotTibia/BotTibia.csproj
@@ -117,7 +117,9 @@
     <Compile Include="Classes\VidaBar.cs" />
     <Compile Include="Classes\CoordenadasXeY.cs" />
     <Compile Include="Classes\Waypoint.cs" />
-    <Compile Include="Enum\MouseEvent.cs" />
+    <Compile Include="Enum\EnumDirecao.cs" />
+    <Compile Include="Enum\EnumWaypoints.cs" />
+    <Compile Include="Enum\EnumMouseEvent.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
