--- a/BotTibia/BotTibia.csproj
+++ b/BotTibia/BotTibia.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Actions\Print\CapturaTela.cs" />
     <Compile Include="Actions\Events\ClickEvent.cs" />
     <Compile Include="Actions\Heal\Healer.cs" />
+    <Compile Include="Classes\Backpacks.cs" />
     <Compile Include="Classes\Coordenada.cs" />
     <Compile Include="Classes\Global.cs" />
     <Compile Include="Classes\CoordenadasDeElementos.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="Classes\CoordenadasXeY.cs" />
     <Compile Include="Classes\Waypoint.cs" />
     <Compile Include="Enum\EnumAction.cs" />
+    <Compile Include="Enum\EnumBackpacks.cs" />
     <Compile Include="Enum\EnumDirecao.cs" />
     <Compile Include="Enum\EnumWaypoints.cs" />
     <Compile Include="Enum\EnumMouseEvent.cs" />
@@ -315,6 +317,37 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Images\Global\Configs\characterWindow_2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\ConfigsGerais\Close.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Global\Backpacks\Corpo\backpack.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\Global\Backpacks\Corpo\blue.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\Global\Backpacks\Corpo\brocade.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\Global\Backpacks\Corpo\dragon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\Global\Backpacks\Nome\backpack.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\Global\Backpacks\Nome\blue.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\Global\Backpacks\Nome\brocade.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\Global\Backpacks\Nome\dragon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
